[gd_scene load_steps=10 format=3 uid="uid://bkx1i87olyije"]

[ext_resource type="Script" path="res://creature/friend.gd" id="1_xer2u"]
[ext_resource type="Texture2D" uid="uid://dyy67jqvxqhdf" path="res://creature/friend.png" id="2_q1ro0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1up75"]
atlas = ExtResource("2_q1ro0")
region = Rect2(0, 0, 11, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux3al"]
atlas = ExtResource("2_q1ro0")
region = Rect2(11, 0, 11, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uvi1"]
atlas = ExtResource("2_q1ro0")
region = Rect2(22, 0, 11, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_84868"]
atlas = ExtResource("2_q1ro0")
region = Rect2(0, 26, 11, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjfro"]
atlas = ExtResource("2_q1ro0")
region = Rect2(11, 26, 11, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_5tn8d"]
animations = [{
"frames": [{
"duration": 15.0,
"texture": SubResource("AtlasTexture_1up75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux3al")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux3al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uvi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjfro")
}],
"loop": true,
"name": &"sleep",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nw8er"]
size = Vector2(8, 7)

[node name="Friend" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_xer2u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -10)
sprite_frames = SubResource("SpriteFrames_5tn8d")
animation = &"blink"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://creature/friend.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "4cd09d947bcc545a37f802014fecf79e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nw8er")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nw8er")

[node name="StateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PoopTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="EmotionTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="LeftBoundCheck" type="RayCast2D" parent="."]
target_position = Vector2(-10, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="RightBoundCheck" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)
collide_with_areas = true
collide_with_bodies = false

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="PoopTimer" to="." method="_on_poop_timer_timeout"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
[connection signal="timeout" from="EmotionTimer" to="." method="_on_emotion_timer_timeout"]
